testdata/golden/hir_borrow/invalid/mut_borrow_excludes_other.hir
error SEM3018 testdata/golden/hir_borrow/invalid/mut_borrow_excludes_other.sg:4:19 cannot take shared borrow of 'x' while an exclusive borrow is active

== HIR ==
module 

fn t() -> nothing (id=1, sym=1395) {
  let mut x: int [copy] = 1
  let m: &mut int [&mut] = (&mut x): &mut int
  let r: &int [&] = (& x): &int
  return
}

borrow edges:
  L2791(m) (&mut) borrows L2790(x) at 0:55-61 scope=S3
events:
  borrow_start L2791(m) -> L2790(x) (&mut) at 0:55-61 scope=S3 note="B1"
  borrow_start _ -> L2790(x) at 0:81-83 scope=S3 note="issue=conflict_mut borrow=B1"
  borrow_end L2791(m) -> L2790(x) scope=S3 note="scope_end B1"
move plan:
  L2790(x): MoveCopy (copy type)
  L2791(m): MoveAllowed (non-copy reference)
  L2792(r): MoveCopy (copy type)

